--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Vi - Home page of iissnan</title>
+    <title>Vi - Home page of shawnchenxmu</title>
     <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
 </head>
 
@@ -14,20 +14,14 @@
         <div class="header">
             <h1>Vi</h1>
             <div class="quote">
-                <p class="quote-text animate-init">不积跬步，无以至千里。不积小流，无以成江海。</p>
-                <p class="quote-author animate-init">《劝学篇》—— <strong>荀子</strong></p>
+                <p class="quote-text animate-init">德不孤,必有邻。</p>
+                <p class="quote-author animate-init">《论语·里仁》—— <strong>孔子</strong></p>
             </div>
         </div>
         <div class="menu">
-            <a href="https://github.com/iissnan" class="animate-init">GitHub</a>
-            <a href="http://notes.iissnan.com" class="animate-init">Notes</a>
-            <a href="http://douban.com/people/iissnan" class="animate-init">DouBan</a>
-            <a href="http://weibo.com/iissnan" class="animate-init">WeiBo</a>
-            <p>
-                <a href="http://dudu.zhihu.com/circle/257517" class="animate-init">
-                    奥义·复制粘贴加调试
-                </a>
-            </p>
+            <a href="https://github.com/shawnchenxmu" class="animate-init">GitHub</a>
+            <a href="http://shawnchenxmu.github.io" class="animate-init">Blog</a>
+            <a href="https://500px.com/1004740775" class="animate-init">500px</a>
         </div>
         <div class="location">
             <i class="location-icon"></i>
