--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="vi">
     <div class="sidebar">
         <div class="header">
-            <img src='http://p1.bqimg.com/579418/81bba2e7cd965dcd.png' width="60px;" height="60px;">
+            <h1><img src='http://p1.bqimg.com/579418/81bba2e7cd965dcd.png' width="100px;" height="100px;"></h1>
             <div class="quote">
                 <p class="quote-text animate-init">德不孤,必有邻。</p>
                 <p class="quote-author animate-init">《论语·里仁》—— <strong>孔子</strong></p>
