--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header">
             <h1><img src='http://p1.bqimg.com/579418/81bba2e7cd965dcd.png' width="100px;" height="100px;"></h1>
             <div class="quote">
-                <p class="quote-text animate-init">德不孤,必有邻。</p>
+                <p class="quote-text animate-init">德不孤，必有邻。</p>
                 <p class="quote-author animate-init">《论语·里仁》—— <strong>孔子</strong></p>
             </div>
         </div>
@@ -43,7 +43,7 @@
         var DELAY_STEP = 200;
         var animationOptions = { opacity: 1, top: 0};
 
-        $('h1').animate(animationOptions).promise()
+        $('img').animate(animationOptions).promise()
                 .pipe(animateMain)
                 .pipe(animateLocationIcon);
 
