--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Vi - Home page of shawnchenxmu</title>
+    <title>Home page of shawnchenxmu</title>
     <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
 </head>
 
@@ -12,7 +12,7 @@
 <div class="vi">
     <div class="sidebar">
         <div class="header">
-            <div><img src='http://p1.bqimg.com/579418/81bba2e7cd965dcd.png' width="100px;" height="100px;"></div>
+            <h1><img src='http://p1.bqimg.com/579418/81bba2e7cd965dcd.png' width="100px;" height="100px;"></h1>
             <div class="quote">
                 <p class="quote-text animate-init">德不孤，必有邻。</p>
                 <p class="quote-author animate-init">《论语·里仁》—— <strong>孔子</strong></p>
