--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         var DELAY_STEP = 200;
         var animationOptions = { opacity: 1, top: 0};
 
-        $('img').animate(animationOptions).promise()
+        $('h1').animate(animationOptions).promise()
                 .pipe(animateMain)
                 .pipe(animateLocationIcon);
 
