chang home page
add some tag

--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
 <div class="vi">
     <div class="sidebar">
         <div class="header">
-            <h1><img src='http://p1.bqimg.com/579418/81bba2e7cd965dcd.png' width="100px;" height="100px;"></h1>
+            <h1 class="animate-init"><img src='http://p1.bqimg.com/579418/81bba2e7cd965dcd.png' width="100px;" height="100px;"></h1>
             <div class="quote">
                 <p class="quote-text animate-init">德不孤，必有邻。</p>
                 <p class="quote-author animate-init">《论语·里仁》—— <strong>孔子</strong></p>
             </div>
+        </div>
+        <div class="menu">
+           <span class="animate-init"># 厦门大学·在读</span>
+           <span class="animate-init"># 爱生活</span>
+           <span class="animate-init"># 爱阅读</span>
+           <span class="animate-init"># 完美主义</span><br>
+           <span class="animate-init"># 一个脱离了高级趣味的人</span>
         </div>
         <div class="menu">
             <a href="https://github.com/shawnchenxmu" class="animate-init">GitHub</a>
