--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
            <span class="animate-init"># 厦门大学·在读</span>
            <span class="animate-init"># 爱生活</span>
            <span class="animate-init"># 爱阅读</span>
-           <span class="animate-init"># 完美主义</span><br>
+           <span class="animate-init"># 强迫症</span><br>
            <span class="animate-init"># 一个脱离了高级趣味的人</span>
         </div>
         <div class="menu">
