--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="vi">
     <div class="sidebar">
         <div class="header">
-            <h1 class="animate-init"><img src='https://thumbnail0.baidupcs.com/thumbnail/b2ed2c6b81bba2e7cd965dcd0753a66c?fid=1984884687-250528-1089521754520478&time=1518602400&rt=sh&sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-Tix2bEFC9ceOybEYRi3OiSDJrSI%3D&expires=8h&chkv=0&chkbd=0&chkpc=&dp-logid=1038272203118876202&dp-callid=0&size=c710_u400&quality=100&vuk=-&ft=video' width="100px;" height="100px;"></h1>
+            <h1 class="animate-init"><img src='./source/avatar.png' width="100px;" height="100px;"></h1>
             <div class="quote">
                 <p class="quote-text animate-init">德不孤，必有邻。</p>
                 <p class="quote-author animate-init">《论语·里仁》—— <strong>孔子</strong></p>
