add wechat qrcode

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="vi">
     <div class="sidebar">
         <div class="header">
-            <h1 class="animate-init"><img src='./source/avatar.png' width="100px;" height="100px;"></h1>
+            <h1 class="animate-init"><img src='./source/avatar.jpg' width="100px;" height="100px;"></h1>
             <div class="quote">
                 <p class="quote-text animate-init">德不孤，必有邻。</p>
                 <p class="quote-author animate-init">《论语·里仁》—— <strong>孔子</strong></p>
@@ -29,6 +29,7 @@
             <a href="https://github.com/shawnchenxmu" class="animate-init">GitHub</a>
             <a href="http://shawnchenxmu.github.io" class="animate-init">Blog</a>
             <a href="https://500px.com/1004740775" class="animate-init">500px</a>
+            <a class="animate-init" id="WeChat">WeChat<img id="qrcode" src="./source/qrcode.jpg" /></a>
         </div>
         <div class="location">
             <i class="location-icon"></i>
