--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="vi">
     <div class="sidebar">
         <div class="header">
-            <h1 class="animate-init"><img src='./source/avatar.jpg' width="100px;" height="100px;"></h1>
+            <h1 class="animate-init"><img src='./source/avatar.jpeg' width="100px;" height="100px;"></h1>
             <div class="quote">
                 <p class="quote-text animate-init">德不孤，必有邻。</p>
                 <p class="quote-author animate-init">《论语·里仁》—— <strong>孔子</strong></p>
