--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="menu">
-           <span class="animate-init"># 厦门大学·在读</span>
+           <span class="animate-init"># 厦门大学</span>
            <span class="animate-init"># 爱生活</span>
            <span class="animate-init"># 爱阅读</span>
            <span class="animate-init"># 强迫症</span><br>
@@ -33,7 +33,7 @@
         </div>
         <div class="location">
             <i class="location-icon"></i>
-            <span class="location-text animate-init">XiaMen - China</span>
+            <span class="location-text animate-init">ShangHai - China</span>
         </div>
         <div class="relocating">
             Navigating to: <span class="relocate-location"></span>...
