--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="header">
             <h1 class="animate-init"><img src='./source/avatar.jpeg' width="100px;" height="100px;"></h1>
             <div class="quote">
-                <p class="quote-text animate-init">德不孤，必有邻。</p>
-                <p class="quote-author animate-init">《论语·里仁》—— <strong>孔子</strong></p>
+                <p class="quote-text animate-init">凤凰于飞，和鸣锵锵</p>
+                <p class="quote-author animate-init">《左传》
             </div>
         </div>
         <div class="menu">
