--- a/index.html
+++ b/index.html
@@ -14,21 +14,20 @@
         <div class="header">
             <h1 class="animate-init"><img src='./source/avatar.jpeg' width="100px;" height="100px;"></h1>
             <div class="quote">
-                <p class="quote-text animate-init">凤凰于飞，和鸣锵锵</p>
-                <p class="quote-author animate-init">《左传》
+                <p class="quote-text animate-init">呜呼，生平求一敌手而不可得，诚寂寥难堪也。</p>
+                <!-- <p class="quote-author animate-init">《左传》 -->
             </div>
         </div>
         <div class="menu">
-           <span class="animate-init"># 厦门大学</span>
-           <span class="animate-init"># 爱生活</span>
-           <span class="animate-init"># 爱阅读</span>
-           <span class="animate-init"># 强迫症</span><br>
+           <span class="animate-init"># 看书</span>
+           <span class="animate-init"># 健身</span>
+           <span class="animate-init"># 写代码</span>
+           <span class="animate-init"># 摸鱼</span><br>
            <span class="animate-init"># 一个脱离了高级趣味的人</span>
         </div>
         <div class="menu">
             <a href="https://github.com/shawnchenxmu" class="animate-init">GitHub</a>
             <a href="http://shawnchenxmu.github.io" class="animate-init">Blog</a>
-            <a href="https://500px.com/1004740775" class="animate-init">500px</a>
             <a class="animate-init" id="WeChat">WeChat<img id="qrcode" src="./source/qrcode.jpg" /></a>
         </div>
         <div class="location">
